setup project files - part1

--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "youtube-chai-app",
   "version": "1.0.0",
   "description": "a backend at chai aur code channel",
-  "main": " ",
+  "main": "index.js ",
+  "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon src/index.js"
   },
   "repository": {
     "type": "git",
@@ -16,5 +17,8 @@
     "chai"
   ],
   "author": "vivek",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "nodemon": "^3.1.10"
+  }
 }
